# yolo-detector-ui

./: .gitignore  app.py  pyproject.toml
